# darkcore

./: .gitignore  README.md  fix.py  patch.diff  pyproject.toml  test.sh
.github/workflows/: ci.yml  publish-on-tag.yml
darkcore/: __init__.py  core.py  either.py  either_t.py  maybe.py  maybe_t.py  reader.py  reader_t.py  result.py  result_t.py  state.py  state_t.py  traverse.py  writer.py  writer_t.py
tests/: test_either.py  test_either_t.py  test_integration.py  test_laws_property_based.py  test_match_either.py  test_match_maybe.py  test_match_result.py  test_match_writer.py  test_maybe.py  test_maybe_t.py  test_reader.py  test_reader_t.py  test_result.py  test_result_t.py  test_rwst.py  test_state.py  test_state_t.py  test_traverse.py  test_validation.py  test_validation_t.py  test_writer.py  test_writer_t.py
tests/property/: test_laws_property_based.py
